<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    >

    <TextView
        android:text="@string/Glossary_acty_Wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="#333333"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:text="@string/Glossary_acty_commont_device_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="#333333"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#cdcdcd"
        android:padding="15dp"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_Operating_systems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:text="@string/Glossary_acty_Common_device_terms_Operating_systems"
            />
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_Supported_cryptocurrencies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_Supported_cryptocurrencies"
                />
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_Psi_Wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_Psi_Wallet"
                />
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_Compatibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_333333"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_Compatibility"
                />
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_Android"
                />
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_ChromeOS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_ChromeOS"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_ios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:text="@string/Glossary_acty_Common_device_terms_IOS"
                />
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_Linux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_Linux"
                />
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_macos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_macOS"
                />
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_Windows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_333333"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_Windows"
                />
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_Windows_Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_Windows_Phone"
                />
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_Wallet_components"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_Wallet_components"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_Passphrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:text="@string/Glossary_acty_Common_device_terms_Passphrase"
                />
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_Recovery_seed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_Recovery_seed"
                />
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_Protection_personalization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_Protection_personalization"
                />

            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_Name"
                />
            <TextView
                android:id="@+id/Glossary_acty_Common_device_terms_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/base_87cd8f"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/Glossary_acty_Common_device_terms_pin"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>