<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".glossary.GlossaryActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        >

        <TextView
            android:text="@string/Glossary_acty_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#333333"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:text="@string/Glossary_acty_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#333333"
            android:textSize="16sp"
            />

        <TextView
            android:text="内容"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#333333"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:text="@string/Glossary_acty_Wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            />
        <TextView
            android:text="@string/Glossary_acty_commont_device_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:visibility="gone"
            />
        <TextView
            android:text="@string/Glossary_acty_hardware_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:text="@string/Glossary_acty_package"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:text="@string/Glossary_acty_Accessories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            />

        <TextView
            android:text="@string/Glossary_acty_Wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            />
        <TextView
            android:text="@string/Glossary_acty_community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            />

        <TextView
            android:text="@string/Glossary_acty_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            />

        <TextView
            android:text="@string/Glossary_acty_ecosystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            />

        <TextView
            android:text="@string/Glossary_acty_development"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:text="@string/Glossary_acty_development_Overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:text="@string/Glossary_acty_development_Security_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:text="@string/Glossary_acty_development_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:visibility="gone"
            />

        <TextView
            android:text="@string/Glossary_acty_development_Changelogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            />

        <TextView
            android:text="@string/Glossary_acty_Cryptocurrencies_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            />
        <TextView
            android:text="@string/Glossary_acty_Cryptocurrencies_Common_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:visibility="gone"
            />
        <TextView
            android:text="@string/Glossary_acty_Cryptocurrencies_Coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:text="@string/Glossary_acty_Cryptocurrencies_Risks_dangers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:visibility="gone"
            />

        <TextView
            android:text="@string/Glossary_acty_Cryptocurrencies_servers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/base_87cd8f"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/Common_device_terms_contaner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            ></LinearLayout>

        <LinearLayout
            android:id="@+id/Hardware_software_contaner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            ></LinearLayout>

        <LinearLayout
            android:id="@+id/package_contaner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            ></LinearLayout>

        <LinearLayout
            android:id="@+id/accessories_contaner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            ></LinearLayout>

        <LinearLayout
            android:id="@+id/ecosystem_contaner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            ></LinearLayout>

        <LinearLayout
            android:id="@+id/psi_develop_contaner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            ></LinearLayout>


    </LinearLayout>

</ScrollView>