<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".glossary.WalletIntroduceActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/psi_logo_icon"
        />

    <TextView
        android:id="@+id/wallet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wallet_introduce_name"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/wallet_introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wallet_introduce_introduce"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Wallet_introduce_support"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Wallet_introduce_support_android"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/base_87cd8f"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Wallet_introduce_support_ios"
        android:textSize="20sp"
        android:gravity="left"
        android:textColor="@color/base_87cd8f"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />
</LinearLayout>